refactor: 重构暗色模式实现并添加多语言支持

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -32,7 +32,8 @@
       "stats": "عرض إحصائيات مفصلة حول عادات الاستماع لديك",
       "top": "شاهد أفضل الفنانين والمسارات لديك",
       "playlists": "إنشاء قوائم تشغيل بناءً على ذوقك",
-      "downloads": "قريبًا: تنزيل أغانيك المفضلة"
+      "downloads": "قريبًا: تنزيل أغانيك المفضلة",
+      "heading": "استكشف الموسيقى"
     }
   },
   "stats": {
