--- a/src/locales/da/translation.json
+++ b/src/locales/da/translation.json
@@ -32,7 +32,8 @@
       "stats": "Se detaljeret statistik om dine lyttevaner",
       "top": "Se dine topkunstnere og numre",
       "playlists": "Generer playlister baseret på din smag",
-      "downloads": "Kommer snart: Download dine yndlingssange"
+      "downloads": "Kommer snart: Download dine yndlingssange",
+      "heading": "Udforsk musik"
     }
   },
   "stats": {
