--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -32,7 +32,8 @@
       "stats": "Sieh dir detaillierte Statistiken über deine Hörgewohnheiten an",
       "top": "Sieh dir deine Top-Künstler und -Tracks an",
       "playlists": "Generiere Playlists basierend auf deinem Geschmack",
-      "downloads": "Demnächst: Lade deine Lieblingssongs herunter"
+      "downloads": "Demnächst: Lade deine Lieblingssongs herunter",
+      "heading": "Musik erkunden"
     }
   },
   "stats": {
