--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -32,7 +32,8 @@
       "stats": "Ver estadísticas detalladas sobre tus hábitos de escucha",
       "top": "Ver tus artistas y canciones principales",
       "playlists": "Generar listas de reproducción basadas en tus gustos",
-      "downloads": "Próximamente: Descarga tus canciones favoritas"
+      "downloads": "Próximamente: Descarga tus canciones favoritas",
+      "heading": "Explorar Música"
     }
   },
   "stats": {
