--- a/src/locales/fi/translation.json
+++ b/src/locales/fi/translation.json
@@ -32,7 +32,8 @@
       "stats": "Katso yksityiskohtaisia tilastoja kuuntelutottumuksistasi",
       "top": "Näe suosituimmat artistisi ja kappaleesi",
       "playlists": "Luo soittolistoja makusi perusteella",
-      "downloads": "Tulossa pian: Lataa suosikkikappaleesi"
+      "downloads": "Tulossa pian: Lataa suosikkikappaleesi",
+      "heading": "Tutki musiikkia"
     }
   },
   "stats": {
