--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -29,7 +29,8 @@
       "stats": "Consultez des statistiques détaillées sur vos habitudes d'écoute",
       "top": "Découvrez vos artistes et titres préférés",
       "playlists": "Générez des playlists basées sur vos goûts",
-      "downloads": "Bientôt disponible : Téléchargez vos chansons préférées"
+      "downloads": "Bientôt disponible : Téléchargez vos chansons préférées",
+      "heading": "Explorer la Musique"
     }
   },
   "stats": {
