--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -32,7 +32,8 @@
       "stats": "अपनी सुनने की आदतों के बारे में विस्तृत आँकड़े देखें",
       "top": "अपने शीर्ष कलाकारों और ट्रैक देखें",
       "playlists": "अपने स्वाद के अनुसार प्लेलिस्ट बनाएं",
-      "downloads": "जल्द आ रहा है: अपने पसंदीदा गाने डाउनलोड करें"
+      "downloads": "जल्द आ रहा है: अपने पसंदीदा गाने डाउनलोड करें",
+      "heading": "संगीत खोजें"
     }
   },
   "stats": {
