--- a/src/locales/id/translation.json
+++ b/src/locales/id/translation.json
@@ -32,7 +32,8 @@
       "stats": "Lihat statistik terperinci tentang kebiasaan mendengarkan Anda",
       "top": "Lihat artis dan lagu teratas Anda",
       "playlists": "Buat daftar putar berdasarkan selera Anda",
-      "downloads": "Segera hadir: Unduh lagu favorit Anda"
+      "downloads": "Segera hadir: Unduh lagu favorit Anda",
+      "heading": "Jelajahi Musik"
     }
   },
   "stats": {
