--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -32,7 +32,8 @@
       "stats": "Visualizza statistiche dettagliate sulle tue abitudini di ascolto",
       "top": "Vedi i tuoi artisti e brani più ascoltati",
       "playlists": "Genera playlist basate sui tuoi gusti",
-      "downloads": "Prossimamente: Scarica le tue canzoni preferite"
+      "downloads": "Prossimamente: Scarica le tue canzoni preferite",
+      "heading": "Esplora la Musica"
     }
   },
   "stats": {
