--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -29,7 +29,8 @@
       "stats": "リスニング習慣に関する詳細な統計を表示",
       "top": "トップアーティストとトラックを確認",
       "playlists": "あなたの好みに基づいたプレイリストを生成",
-      "downloads": "近日公開：お気に入りの曲をダウンロード"
+      "downloads": "近日公開：お気に入りの曲をダウンロード",
+      "heading": "音楽を探索"
     }
   },
   "stats": {
