--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -32,7 +32,8 @@
       "stats": "Bekijk gedetailleerde statistieken over je luistergewoonten",
       "top": "Zie je favoriete artiesten en nummers",
       "playlists": "Genereer afspeellijsten op basis van je smaak",
-      "downloads": "Binnenkort: Download je favoriete nummers"
+      "downloads": "Binnenkort: Download je favoriete nummers",
+      "heading": "Muziek verkennen"
     }
   },
   "stats": {
