--- a/src/locales/no/translation.json
+++ b/src/locales/no/translation.json
@@ -32,7 +32,8 @@
       "stats": "Se detaljert statistikk om lyttevanene dine",
       "top": "Se dine topp artister og spor",
       "playlists": "Generer spillelister basert på smaken din",
-      "downloads": "Kommer snart: Last ned favorittlåtene dine"
+      "downloads": "Kommer snart: Last ned favorittlåtene dine",
+      "heading": "Utforsk musikk"
     }
   },
   "stats": {
