--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -32,7 +32,8 @@
       "stats": "Zobacz szczegółowe statystyki dotyczące Twoich nawyków słuchania",
       "top": "Zobacz swoich najczęściej słuchanych artystów i utwory",
       "playlists": "Generuj playlisty na podstawie swoich upodobań",
-      "downloads": "Wkrótce: Pobierz swoje ulubione utwory"
+      "downloads": "Wkrótce: Pobierz swoje ulubione utwory",
+      "heading": "Odkrywaj Muzykę"
     }
   },
   "stats": {
