--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -32,7 +32,8 @@
       "stats": "Veja estatísticas detalhadas sobre seus hábitos de escuta",
       "top": "Veja seus artistas e faixas mais ouvidas",
       "playlists": "Gere playlists baseadas no seu gosto",
-      "downloads": "Em breve: Baixe suas músicas favoritas"
+      "downloads": "Em breve: Baixe suas músicas favoritas",
+      "heading": "Explorar Música"
     }
   },
   "stats": {
