--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -29,7 +29,8 @@
       "stats": "Просматривайте подробную статистику о своих привычках прослушивания",
       "top": "Смотрите своих лучших исполнителей и треки",
       "playlists": "Создавайте плейлисты на основе ваших предпочтений",
-      "downloads": "Скоро: Загрузка любимых песен"
+      "downloads": "Скоро: Загрузка любимых песен",
+      "heading": "Исследовать музыку"
     }
   },
   "stats": {
