--- a/src/locales/sv/translation.json
+++ b/src/locales/sv/translation.json
@@ -32,7 +32,8 @@
       "stats": "Se detaljerad statistik om dina lyssningsvanor",
       "top": "Se dina topplistade artister och låtar",
       "playlists": "Generera spellistor baserade på din smak",
-      "downloads": "Kommer snart: Ladda ner dina favoritlåtar"
+      "downloads": "Kommer snart: Ladda ner dina favoritlåtar",
+      "heading": "Utforska musik"
     }
   },
   "stats": {
