--- a/src/locales/th/translation.json
+++ b/src/locales/th/translation.json
@@ -32,7 +32,8 @@
       "stats": "ดูสถิติโดยละเอียดเกี่ยวกับนิสัยการฟังเพลงของคุณ",
       "top": "ดูศิลปินและเพลงยอดนิยมของคุณ",
       "playlists": "สร้างเพลย์ลิสต์ตามรสนิยมของคุณ",
-      "downloads": "เร็วๆ นี้: ดาวน์โหลดเพลงโปรดของคุณ"
+      "downloads": "เร็วๆ นี้: ดาวน์โหลดเพลงโปรดของคุณ",
+      "heading": "สำรวจดนตรี"
     }
   },
   "stats": {
