--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -32,7 +32,8 @@
       "stats": "Xem thống kê chi tiết về thói quen nghe nhạc",
       "top": "Xem nghệ sĩ và bài hát hàng đầu của bạn",
       "playlists": "Tạo danh sách phát dựa trên gu âm nhạc của bạn",
-      "downloads": "Sắp ra mắt: Tải xuống bài hát yêu thích của bạn"
+      "downloads": "Sắp ra mắt: Tải xuống bài hát yêu thích của bạn",
+      "heading": "Khám phá âm nhạc"
     }
   },
   "stats": {
