--- a/src/locales/zh-TW/translation.json
+++ b/src/locales/zh-TW/translation.json
@@ -29,7 +29,8 @@
       "stats": "查看有關您的收聽習慣的詳細統計數據",
       "top": "查看您最喜愛的藝術家和曲目",
       "playlists": "根據您的品味生成播放清單",
-      "downloads": "即將推出：下載您喜愛的歌曲"
+      "downloads": "即將推出：下載您喜愛的歌曲",
+      "heading": "探索音樂"
     }
   },
   "stats": {
