--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -29,7 +29,8 @@
       "stats": "청취 습관에 대한 상세한 통계 보기",
       "top": "인기 아티스트와 트랙 확인",
       "playlists": "취향에 맞는 재생목록 생성",
-      "downloads": "출시 예정: 좋아하는 노래 다운로드"
+      "downloads": "출시 예정: 좋아하는 노래 다운로드",
+      "heading": "음악 탐색"
     }
   },
   "stats": {
