--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -33,7 +33,11 @@
       "top": "अपने शीर्ष कलाकारों और ट्रैक देखें",
       "playlists": "अपने स्वाद के अनुसार प्लेलिस्ट बनाएं",
       "downloads": "जल्द आ रहा है: अपने पसंदीदा गाने डाउनलोड करें",
-      "heading": "संगीत खोजें"
+      "heading": "संगीत खोजें",
+      "stats_desc": "अपनी सुनने की आदतों के बारे में विस्तृत आँकड़े देखें",
+      "top_desc": "अपने पसंदीदा कलाकारों और गानों को खोजें",
+      "playlists_desc": "अपने स्वाद के अनुसार प्लेलिस्ट बनाएं",
+      "downloads_desc": "जल्द आ रहा है: अपने पसंदीदा गाने डाउनलोड करें"
     }
   },
   "stats": {
