--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -30,7 +30,11 @@
       "top": "トップアーティストとトラックを確認",
       "playlists": "あなたの好みに基づいたプレイリストを生成",
       "downloads": "近日公開：お気に入りの曲をダウンロード",
-      "heading": "音楽を探索"
+      "heading": "音楽を探索",
+      "stats_desc": "リスニング習慣の詳細な統計を表示",
+      "top_desc": "お気に入りのアーティストと曲を確認",
+      "playlists_desc": "あなたの好みに基づいてプレイリストを生成",
+      "downloads_desc": "近日公開：お気に入りの曲をダウンロード"
     }
   },
   "stats": {
