--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -30,7 +30,11 @@
       "top": "Смотрите своих лучших исполнителей и треки",
       "playlists": "Создавайте плейлисты на основе ваших предпочтений",
       "downloads": "Скоро: Загрузка любимых песен",
-      "heading": "Исследовать музыку"
+      "heading": "Исследовать музыку",
+      "stats_desc": "Просмотр подробной статистики о ваших привычках прослушивания",
+      "top_desc": "Узнайте ваших любимых исполнителей и треки",
+      "playlists_desc": "Создавайте плейлисты на основе ваших предпочтений",
+      "downloads_desc": "Скоро: Загружайте любимые песни"
     }
   },
   "stats": {
