--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -28,13 +28,13 @@
       "heading": "探索音乐",
       "title": "探索您的音乐品味",
       "stats": "详细统计数据",
-      "stats_desc": "查看有关您的收听习惯的详细统计数据和分析图表",
+      "stats_desc": "查看听歌习惯的详细统计",
       "top": "最喜爱艺术家和歌曲",
-      "top_desc": "查看您最喜爱的艺术家、专辑和曲目，了解您的音乐偏好",
+      "top_desc": "查看你的最爱艺人和歌曲",
       "playlists": "个性化歌单",
-      "playlists_desc": "根据您的音乐品味和收听习惯生成专属于您的歌单推荐",
+      "playlists_desc": "根据你的品味生成歌单",
       "downloads": "音乐下载",
-      "downloads_desc": "即将推出：下载您喜爱的歌曲和播放列表供离线收听"
+      "downloads_desc": "即将推出：下载你喜欢的歌曲"
     }
   },
   "stats": {
