--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -33,7 +33,11 @@
       "top": "شاهد أفضل الفنانين والمسارات لديك",
       "playlists": "إنشاء قوائم تشغيل بناءً على ذوقك",
       "downloads": "قريبًا: تنزيل أغانيك المفضلة",
-      "heading": "استكشف الموسيقى"
+      "heading": "استكشف الموسيقى",
+      "stats_desc": "عرض إحصائيات مفصلة عن عادات الاستماع لديك",
+      "top_desc": "اكتشف فنانيك وأغانيك المفضلة",
+      "playlists_desc": "إنشاء قوائم تشغيل بناءً على ذوقك",
+      "downloads_desc": "قريباً: تنزيل أغانيك المفضلة"
     }
   },
   "stats": {
