--- a/src/locales/fi/translation.json
+++ b/src/locales/fi/translation.json
@@ -33,7 +33,11 @@
       "top": "Näe suosituimmat artistisi ja kappaleesi",
       "playlists": "Luo soittolistoja makusi perusteella",
       "downloads": "Tulossa pian: Lataa suosikkikappaleesi",
-      "heading": "Tutki musiikkia"
+      "heading": "Tutki musiikkia",
+      "stats_desc": "Katso yksityiskohtaisia tilastoja kuuntelutottumuksistasi",
+      "top_desc": "Löydä suosikkiartistisi ja -kappaleesi",
+      "playlists_desc": "Luo soittolistoja makusi mukaan",
+      "downloads_desc": "Tulossa pian: Lataa suosikkikappaleesi"
     }
   },
   "stats": {
