--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -33,7 +33,11 @@
       "top": "Vedi i tuoi artisti e brani più ascoltati",
       "playlists": "Genera playlist basate sui tuoi gusti",
       "downloads": "Prossimamente: Scarica le tue canzoni preferite",
-      "heading": "Esplora la Musica"
+      "heading": "Esplora la Musica",
+      "stats_desc": "Visualizza statistiche dettagliate sulle tue abitudini di ascolto",
+      "top_desc": "Scopri i tuoi artisti e brani preferiti",
+      "playlists_desc": "Genera playlist basate sui tuoi gusti",
+      "downloads_desc": "Prossimamente: Scarica le tue canzoni preferite"
     }
   },
   "stats": {
