--- a/src/locales/no/translation.json
+++ b/src/locales/no/translation.json
@@ -33,7 +33,11 @@
       "top": "Se dine topp artister og spor",
       "playlists": "Generer spillelister basert på smaken din",
       "downloads": "Kommer snart: Last ned favorittlåtene dine",
-      "heading": "Utforsk musikk"
+      "heading": "Utforsk musikk",
+      "stats_desc": "Se detaljert statistikk over dine lyttevaner",
+      "top_desc": "Oppdag dine favorittartister og sanger",
+      "playlists_desc": "Generer spillelister basert på din smak",
+      "downloads_desc": "Kommer snart: Last ned favorittmusikken din"
     }
   },
   "stats": {
