--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -33,7 +33,11 @@
       "top": "Veja seus artistas e faixas mais ouvidas",
       "playlists": "Gere playlists baseadas no seu gosto",
       "downloads": "Em breve: Baixe suas músicas favoritas",
-      "heading": "Explorar Música"
+      "heading": "Explorar Música",
+      "stats_desc": "Veja estatísticas detalhadas sobre seus hábitos de escuta",
+      "top_desc": "Descubra seus artistas e músicas favoritas",
+      "playlists_desc": "Gere playlists baseadas em seu gosto",
+      "downloads_desc": "Em breve: Baixe suas músicas favoritas"
     }
   },
   "stats": {
