--- a/src/locales/sv/translation.json
+++ b/src/locales/sv/translation.json
@@ -33,7 +33,11 @@
       "top": "Se dina topplistade artister och låtar",
       "playlists": "Generera spellistor baserade på din smak",
       "downloads": "Kommer snart: Ladda ner dina favoritlåtar",
-      "heading": "Utforska musik"
+      "heading": "Utforska musik",
+      "stats_desc": "Se detaljerad statistik över dina lyssningsvanor",
+      "top_desc": "Upptäck dina favoritartister och låtar",
+      "playlists_desc": "Skapa spellistor baserade på din smak",
+      "downloads_desc": "Kommer snart: Ladda ner dina favoritlåtar"
     }
   },
   "stats": {
