--- a/src/locales/th/translation.json
+++ b/src/locales/th/translation.json
@@ -33,7 +33,11 @@
       "top": "ดูศิลปินและเพลงยอดนิยมของคุณ",
       "playlists": "สร้างเพลย์ลิสต์ตามรสนิยมของคุณ",
       "downloads": "เร็วๆ นี้: ดาวน์โหลดเพลงโปรดของคุณ",
-      "heading": "สำรวจดนตรี"
+      "heading": "สำรวจดนตรี",
+      "stats_desc": "ดูสถิติโดยละเอียดเกี่ยวกับนิสัยการฟังของคุณ",
+      "top_desc": "ค้นพบศิลปินและเพลงที่คุณชื่นชอบ",
+      "playlists_desc": "สร้างเพลย์ลิสต์ตามรสนิยมของคุณ",
+      "downloads_desc": "เร็วๆ นี้: ดาวน์โหลดเพลงโปรดของคุณ"
     }
   },
   "stats": {
